force-app/main/default/objects/Component__c/Component__c.object-meta.xml
<CustomObject>
    <label>Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>