force-app/main/default/objects/Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Meal</fullName>
            </value>
            <value>
                <fullName>Tours</fullName>
            </value>
            <value>
                <fullName>Add-On</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Auswalk Miscellaneous</fullName>
            </value>
            <value>
                <fullName>National Park Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>