force-app/main/default/objects/Component__c/fields/Net_Cost__c.field-meta.xml
<CustomField>
    <fullName>Net_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Net Cost</label>
    <type>Checkbox</type>
</CustomField>