force-app/main/default/objects/Component__c/fields/Trip_add_on__c.field-meta.xml
<CustomField>
    <fullName>Trip_add_on__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip add-on</label>
    <referenceTo>Trip_add_on__c</referenceTo>
    <relationshipLabel>Component</relationshipLabel>
    <relationshipName>Component</relationshipName>
    <type>Lookup</type>
</CustomField>